--- a/css/travel_now.css
+++ b/css/travel_now.css
@@ -126,7 +126,7 @@ body {
 
 .travel-hero {
   position: relative;
-  background: url('../../assets/header/travel.jpg') center/cover no-repeat;
+  background: url('assets/header/travel.jpg') center/cover no-repeat;
   background-size: cover;
   background-position: center;
   height: 300px;
@@ -314,3 +314,4 @@ input[type="number"]::-webkit-outer-spin-button {
   animation: shake 0.4s ease;
   border: 1px solid red !important;
 }
+
